appendix/cicd-cloud-native/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cicd-app
spec:
  type: ClusterIP
  selector:
    app: cicd-app
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
